--- a/client/index.css
+++ b/client/index.css
@@ -1,10 +1,10 @@
 .form-control.ng-dirty.ng-invalid{
     border-color: red;
-    box-shadow: inset  1px 1px red;
+    box-shadow: inset  0 0 1px 0 red;
 }
 .form-control.ng-dirty.ng-valid{
     border-color: green;
-    box-shadow: inset  1px 1px green;
+    box-shadow: inset  0 0 1px 0 green;
 }
 .mdset{
     border-top:2px solid grey;
