--- a/client/index.css
+++ b/client/index.css
@@ -15,3 +15,9 @@
     font-size:2em;
     text-align:center;
 }
+.oggetto{
+    display:block;
+    max-width:200px;
+    margin:20px auto;     
+    text-align:center;
+}
