--- a/client/index.css
+++ b/client/index.css
@@ -20,4 +20,6 @@
     max-width:200px;
     margin:20px auto;     
     text-align:center;
+    font-family: 'Indie Flower', cursive;
+    font-size:20px;
 }
