--- a/client/index.css
+++ b/client/index.css
@@ -11,11 +11,6 @@
     border-bottom:2px solid grey;
     padding: 10px;
 }
-.title{
-    font-size:2em;
-    text-align:center;
-    font-family: 'Bangers', cursive;    
-}
 .oggetto{
     display:block;
     max-width:200px;
@@ -23,3 +18,17 @@
     text-align:center;
     font-size:20px;
 }
+.title{
+    font-size:2em;
+    text-align:center;
+    font-family: 'Bangers', cursive;    
+}
+#toast{
+    position:fixed;
+    max-width:250px;
+    right:-100;
+}
+
+
+
+
